
* Added vertical_unit parameter to harp_product_smooth_vertical() and
  harp_product_regrid_vertical_with_collocated_dataset() functions.

* Python harp.import_product() and harp.ingest_product() functions now accept
  a list of filenames or a globbing pattern as parameter (which will return
  the result of harp.concatenate() on the imported/ingested products).

* The parsing of the operations string has been rewritten using flex/yacc.
  This has fixed several issues related to the parsing and execution of
  operations.

* Fixed issue with flatten() operation providing wrong results.

* Fixed issue where vertical regridding to a common grid provided wrong
  results.

* Aligned order of latitude/longitude arguments in all functions to have
  latitude first and longitude second.

* Added unit 'ppv' to the included udunits2-common.xml file.

* Added variables for surface temperature, total water vapour content, and
  total cloud cover to ECMWF GRIB ingestion.

* The default internal units have been changes to SI (except for molar mass).
  All algorithms have been adapted accordingly.

* Added variable conversions for apriori profiles.

* Added support for GEOMS FTIR C2H2 ingestion.

* Added support for OMI OMCHOCHO ingestion.

* Added support for QA4ECV NO2 and HCHO products.

0.4 2016-10-16
~~~~~~~~~~~~~~

* Fixed wrong scaling factor in conversions related to the ideal gas law
  (10^2 vs. 10^-2) and barometric formula (10^-9 vs. 10^-6).

* Fixed error in algorithm to derive gravity from latitude and height.

* Fixed invalid sorting of collocation result file (which resulted in wrong
  results when performing a collocation resampling).

* Fixed wrong independent dimension length for altitude/pressure bounds for
  SCIAMACHY Level2 ingestion.

* Added apriori number density variables to SCIAMACHY Level2 ingestion.

* Added variable conversion from latitude/longitude per vertical profile point
  to single (mid-point) latitude/longitude for profile.
